# golden-player

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Rules.mk  version.h.in
conf/: camera-v4l2.json
examples/: CMakeLists.txt  Makefile  gplayer-filesrc-h264.cpp  gplayer-h264.cpp  gplayer-mjpeg.cpp  gplayer-multiple-display.cpp  gplayer-multiple-filesrc.cpp  gplayer-socket-server.cpp  gplayer.cpp
include/: MMO_Common.h  argus_camera.h  bead.h  beader.h  camera.h  camera_recorder.h  camera_v4l2.h  context.h  display.h  display_egl.h  dma_buffer.h  gp_beader.h  gp_buffer.h  gp_camera_v4l2.h  gp_circular_buffer.h  gp_configuration.h  gp_data.h  gp_display_egl.h  gp_error.h  gp_file.h  gp_filesink.h  gp_filesrc.h  gp_log.h  gp_media_server.h  gp_message.h  gp_net.h  gp_network.h  gp_nvjpeg_decoder.h  gp_nvvideo_decoder.h  gp_nvvideo_encoder.h  gp_pipeline.h  gp_semaphore.h  gp_socket_client.h  gp_socket_server.h  gp_threadpool.h  gp_video_decoder_group.h  gplayer.h  module.h  net_client.h  net_common.h  (+10 more)
samples/: Makefile  Rules.mk  gplayer-filesrc-h264.cpp  gplayer-h264.cpp  gplayer-mjpeg.cpp  gplayer.cpp
samples/golden-player/: .clang-format
samples/golden-player/include/: camera.h  common.h  context.h  gplayer.h  video_decoder.h  video_encoder.h
samples/golden-player/samples/: Makefile  gplayer.cpp
samples/golden-player/src/: Makefile  csvparser.cpp  video_decoder.cpp  video_encoder.cpp
samples/golden_player/: .gitignore  Makefile
samples/golden_player/include/: camera_recorder.h  context.h  gplayer.h  pipeline.h  task.h  video_decoder.h  video_encoder.h
samples/golden_player/samples/: Makefile  gplayer.cpp
samples/golden_player/src/: Makefile  camera_recorder.cpp  gplayer.cpp  pipeline.cpp  video_decode_context.cpp  video_decoder.cpp  video_encode_context.cpp  video_encoder.cpp
scripts/: arm64-cross.cmake  build-thirdparty.sh  env.sh  tidy.sh
src/: CMakeLists.txt  MMO_Server.cpp  Makefile  SimpleClient.cpp  SimpleServer.cpp  argus_camera.cpp  camera_recorder.cpp  camera_v4l2.cpp  display.cpp  display_egl.cpp  gp_beader.cpp  gp_camera_v4l2.cpp  gp_configuration.cpp  gp_display_egl.cpp  gp_file.cpp  gp_filesink.cpp  gp_filesrc.cpp  gp_media_server.cpp  gp_nvjpeg_decoder.cpp  gp_nvvideo_decoder.cpp  gp_nvvideo_encoder.cpp  gp_pipeline.cpp  gp_socket_client.cpp  gp_socket_server.cpp  gp_threadpool.cpp  gp_video_decoder_group.cpp  olcPGEX_Network.h  pipeline.cpp  video_decode_context.cpp  video_decoder.cpp  video_encode_context.cpp  video_encoder.cpp
